--- a/SalesWebMVC/Views/Home/Contact.cshtml
+++ b/SalesWebMVC/Views/Home/Contact.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contatos";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
@@ -7,11 +7,11 @@
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
+    <abbr title="Telefone">P:</abbr>
     425.555.0100
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Contato: </strong> <a href="mailto:contatot@tabajara.com.br">contato@tabajara.com.br</a><br />
+    <strong>Vendas:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
